updating datatable overriding style to get rid of intellij whitespace issues

--- a/survey-app/public/styles/site/_layout.styl
+++ b/survey-app/public/styles/site/_layout.styl
@@ -8,7 +8,7 @@
     margin-right 0px
 
 a
-    color #333
+    color #333 
 
 .answers
     margin-left 15px
@@ -25,12 +25,12 @@ a
 
 .modal-content
     text-align center
-    border $modal-content-border-color 6px solid
+    border $modal-content-border-color 6px solid 
 
 .modal-content .btn-secondary
     background-color white
-    border $modal-content-border-color 1.5px solid   
-    color $modal-content-border-color
+    border $modal-content-border-color 1.5px solid
+    color $modal-content-border-color   
 
 .modal-content .btn
     margin-bottom 10px
@@ -45,7 +45,7 @@ a
     padding-right 5px
 
 .navbar img, .navbar-brand img
-    max-height 70px
+    max-height 70px 
     max-width 70px
     display inline-block
     margin-right 10px
@@ -83,7 +83,7 @@ a
     font-family sans-serif
     font-weight bold
 
-#landing-mid p
+#landing-mid p 
     line-height 2
 
 .navbar-inverse, .navbar-default
@@ -130,6 +130,7 @@ a
     max-width 100%
     height auto
 
-table.dataTable tbody tr {
-    background-color: #e6f3f8 !important;
-}
+
+table.dataTable tbody tr 
+    background-color #e6f3f8 !important
+
